biraz açıklığa kavuştu

--- a/kutuphaneli_konu_tespiti.ipynb
+++ b/kutuphaneli_konu_tespiti.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGjTyGyHFo9jPv3Wbww0n0",
+      "authorship_tag": "ABX9TyOhqiBUuCaZR8Rmg693JZNR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,15 +52,15 @@
         "#Sınıflandırma\n",
         "model = Pipeline([\n",
         "    ('tfidf', TfidfVectorizer()),  # Metinleri sayısal vektöre dönüştürme (ilgililik hesaplaması)\n",
-        "    ('clf', LogisticRegression()),  # Sınıflandırma algoritması\n",
+        "    ('clf', LogisticRegression()),  # tahmin kısmı\n",
         "])\n",
         "\n",
-        "# Modeli eğitme\n",
+        "#hangi kelimelerin hangi konulara bağlı olduğu öğretilir\n",
         "model.fit(metinler, etiketler)\n",
         "\n",
         "# Paragrafın konusunu bulma fonksiyonu\n",
         "def konu_bul(paragraf):\n",
-        "    tahmini_konu = model.predict([paragraf])[0]\n",
+        "    tahmini_konu = model.predict([paragraf])[0] #eğitilmiş modulü kullanır\n",
         "    return tahmini_konu\n",
         "\n",
         "\n",
